adding global_package_advanced
global_package_advanced will check if the source code of a package has changed before building an new wasm.

--- a/test-engine/Cargo.toml
+++ b/test-engine/Cargo.toml
@@ -13,5 +13,6 @@ scrypto-test = "1.2.0"
 radix-substate-store-impls = "1.2.0"
 lazy_static = "1.4.0"
 indexmap = "2.2.6"
+walkdir = "2.3.2"
 
 [lib]
